# algorithm_practice

./: .gitignore  README.md
KMP_search/CMake/: CMakeLists.txt
KMP_search/include/: KMP_search.h
KMP_search/src/: KMP_search.cpp
KMP_search/test/: test_case.cpp  test_main.cpp
ZtoK/SAE/ztok/1/: ZtoK.py  index.wsgi  index.wsgic
ZtoK/SAE/ztok/1/kindlegen/: KindleGen Legal Notices 2009-11-10 Linux.txt
ZtoK/SAE/ztok/1/kindlegen/docs/chinese/: Release Notes.html
ZtoK/SAE/ztok/1/kindlegen/docs/english/: Release Notes.html
ZtoK/SAE/ztok/1/kindlegen/docs/french/: Notes de version.html
ZtoK/SAE/ztok/1/kindlegen/docs/german/: Versionshinweis.html
ZtoK/SAE/ztok/1/kindlegen/docs/italian/: Note di pubblicazione.html
ZtoK/SAE/ztok/1/kindlegen/docs/japanese/: Release Notes.html
ZtoK/SAE/ztok/1/kindlegen/docs/spanish/: Notas de la version.html
ZtoK/SAE/ztok/1/source/: default_kindle.html
ZtoK/chrome_extension/: background.js  content_script.js  manifest.json  popup.html  popup.js  preview.css  preview.html  preview.js
ZtoK/src/: ZtoK.py  default_kindle.html
boost_xpressive_example/boost_xpressive_example/: boost_xpressive_example.sln  boost_xpressive_example.vcxproj  boost_xpressive_example.vcxproj.filters
boost_xpressive_example/boost_xpressive_example/include/: class_name_index.h  find_for.h
boost_xpressive_example/boost_xpressive_example/src/: class_name_index.cpp  find_for.cpp  get_all_cpp.py  main.cpp
gaussian-2d/: gaussian-2d.py
harris_corner/: .ycm_extra_conf.py
harris_corner/CMake/: CMakeLists.txt  compile_commands.json
harris_corner/opencv_sample/: cornerHarris_Demo.cpp  cornerSubPix_Demo.cpp
harris_corner/src/: find_subpixels.cpp  harris_corner.cpp
harris_corner/test/: test_case.cpp
k_means/: .ycm_extra_conf.py
k_means/CMake/: CMakeLists.txt
k_means/src/: K_means_cluster.cpp
k_means/test/: kmeans.cpp  test_case.cpp
kernel-density-estimation/: gaussian_1d_kde.py  gaussian_2d_kde.py  loan.py  my_kde.py
matplotlib_samples/: text_mathtext.py
mean-shift/: .ycm_extra_conf.py
mean-shift/CMake/: CMakeLists.txt  Makefile  mean_shift_video.avi
mean-shift/include/: mean_shift.h
mean-shift/src/: mean_shift.cpp  ms_seg.cpp
mean-shift/test/: meanshift_segmentation.cpp  pyrMSseg_case.cpp  test_case.cpp  test_main.cpp
octree quantization/: main.cpp  octree quantization.sln  octree quantization.vcxproj  octree quantization.vcxproj.filters  octree_quantization.cpp  octree_quantization.h
optical_flow/CMake/: CMakeLists.txt
optical_flow/opencv_sample/: evalate_optical_flow_demo.cc  main.cpp
optical_flow/src/: block_match_optical_flow.cpp
optical_flow/test/: main_blockmatch.cpp  temp.c  test_case.cpp  test_main.cpp
reactor_server/CMake/: CMakeLists.txt
reactor_server/include/: RA_Server.h  event_handler.h  initiation_dispatcher.h  type_ra_server.h
reactor_server/src/: RA_Server.cpp  event_handler.cpp  initiation_dispatcher.cpp
reactor_server/test/: client_case.cpp  client_main.cpp  test_main.cpp
socket_server/CMake/: CMakeLists.txt
socket_server/include/: am_client.h  socket_server.h
socket_server/src/: am_client.cpp  socket_server.cpp  socket_sever.cpp
socket_server/test/: am_client_test.cpp  socket_server_test.cpp
sort/: q_sort.py
tree/: .ycm_extra_conf.py
tree/CMake/: CMakeLists.txt
tree/include/: b_tree.h
tree/src/: b_tree.cpp
tree/test/: test_main.cpp  tree_case.cpp
unit_test_utility/include/: pick_up_test_case.h
v4l2_demo/: gt2005.ko
v4l2_demo/CMake/: CMakeLists.txt
v4l2_demo/jni/: .main.cpp.swp  .record.txt.swp  .v4l2_mock_android.cpp.swp  .v4l2_util.cpp.swp  Android.mk  Application.mk  v4l2_mock_android.cpp
v4l2_demo/jni/include/: V4L2_Camera.h  pick_up_test_case.h
v4l2_demo/jni/src/: V4L2_Camera.cpp  pick_up_test_case.cpp  tools.cpp
v4l2_demo/jni/test/: kmp_build_table_test.cpp  test.cpp  test_main.cpp  tools_test.cpp  v4l2cam_test.cpp
v4l2_demo/prj/: V4L2_PHONE.IAB  V4L2_PHONE.IAD  V4L2_PHONE.IMB  V4L2_PHONE.IMD  V4L2_PHONE.PO  V4L2_PHONE.PR  V4L2_PHONE.PRI  V4L2_PHONE.PS  V4L2_PHONE.WK3
watershed/: .ycm_extra_conf.py  connect_component.cpp  connect_component.h  main.cpp  watershed.cpp  watershed.h  watershed_demo.cpp  watershed_demo.h  watershed_easy_version.sln  watershed_easy_version.vcxproj  watershed_easy_version.vcxproj.filters
watershed/CMake/: CMakeLists.txt
watershed/src/: my_watershed.cpp
watershed/test/: test_case.cpp  watershed_demo.cpp
